2008-07-22  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.[ch]:
	* src/trackerd/tracker-processor.c: (process_module): Make it
	possible to disable modules from the user's config, not just in
	the module files which are owned by root. Added config option
	"disabled-modules". 

2008-07-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/modules/files.c:
	* src/tracker-indexer/modules/evolution.c:
	* src/tracker-indexer/modules/applications.c:
	* src/tracker-indexer/tracker-indexer.c:

	tracker-indexer modules returned a GHashTable with field name/value
	pairs, we now use TrackerField pointers for the hashtable keys, so we
	could deal with values in their native format (instead of having to
	convert everything to strings)

2008-07-21  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.[ch]: 
	* src/trackerd/tracker-marshal.list:
	* src/trackerd/tracker-processor.c: Completely rework the crawler,
	so we have ONE per module. It also now will crawl non-recursive
	directories set in the .module files. All non-recursive
	directories are crawled first. This also moves the "sending" of
	items to the indexer into the processor module so it is in ONE
	place not TWO.

2008-07-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Reverted TrackerField instances as hash keys patch

2008-07-21  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-main.c: 
	* src/trackerd/tracker-monitor.[ch]: 
	* src/trackerd/tracker-processor.c: Make tracker-monitor a GObject
	with signalling when there are items created/updated/deleted and
	move all the code which sends file notifications to the indexer
	into the processor.

2008-07-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Functions for attached
	connections

2008-07-18  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.[ch]: